// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createQueryFile > complex response schema > produces the correct output with complex response schema 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema } from "@workspace/schemas";
import { buildQueryKey, useAxiosInstance } from "../util";

const ResponseSchema = PaginatedResponse(UserSchema);

export const useGetUsersSuspenseQuery = (options?: Except<UseSuspenseQueryOptions<z.infer<typeof ResponseSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();
  const url = "/users";
  const queryKey = options?.queryKey || buildQueryKey(url);

  return useSuspenseQuery({
    queryKey,
    queryFn: async (context) => {
      const response = await axios.get(url, {
        signal: context.signal,
      });

      return ResponseSchema.parse(response.data);
    },
    ...options,
  });
};
"
`;

exports[`createQueryFile > exportQueryOptions > get-basic (no params, no query) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { queryOptions, useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import type { AxiosInstance } from "axios";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema } from "@workspace/schemas";
import { buildQueryKey, useAxiosInstance } from "../util";



export const getUsersQueryOptions = (axios: AxiosInstance) => {
  const url = "/users";

  return queryOptions({
    queryKey: buildQueryKey(url),
    queryFn: async (context) => {
      const response = await axios.get(url, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
  });
};

export const useGetUsersSuspenseQuery = (options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();

  return useSuspenseQuery({
    ...getUsersQueryOptions(axios),
    ...options,
  });
};
"
`;

exports[`createQueryFile > exportQueryOptions > get-with-params (params only) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users/:id
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { queryOptions, useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import type { AxiosInstance } from "axios";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UserParamsSchema } from "@workspace/schemas";
import { buildQueryKey, injectParams, useAxiosInstance } from "../util";




type GetUserQueryInput = {
  params: z.output<typeof UserParamsSchema>;
};

export const getUserQueryOptions = (axios: AxiosInstance, input: GetUserQueryInput) => {
  const { params } = input;

  const url = injectParams("/users/:id", UserParamsSchema, params);

  return queryOptions({
    queryKey: buildQueryKey(url),
    queryFn: async (context) => {
      const response = await axios.get(url, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
  });
};

export const useGetUserSuspenseQuery = (input: GetUserQueryInput, options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();

  return useSuspenseQuery({
    ...getUserQueryOptions(axios, input),
    ...options,
  });
};
"
`;

exports[`createQueryFile > exportQueryOptions > get-with-query (query only) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { queryOptions, useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import type { AxiosInstance } from "axios";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UserQuerySchema } from "@workspace/schemas";
import { buildQueryKey, serializeSearchQuery, useAxiosInstance } from "../util";




type GetUsersQueryInput = {
  query: z.input<typeof UserQuerySchema>;
};

export const getUsersQueryOptions = (axios: AxiosInstance, input: GetUsersQueryInput) => {
  const { query } = input;
  const url = "/users";

  const searchQuery = serializeSearchQuery(query);

  return queryOptions({
    queryKey: buildQueryKey(url, query),
    queryFn: async (context) => {
      const response = await axios.get(\`\${url}?\${searchQuery}\`, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
  });
};

export const useGetUsersSuspenseQuery = (input: GetUsersQueryInput, options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();

  return useSuspenseQuery({
    ...getUsersQueryOptions(axios, input),
    ...options,
  });
};
"
`;

exports[`createQueryFile > exportQueryOptions > get-with-query-and-params (both) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users/:id/posts
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { queryOptions, useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import type { AxiosInstance } from "axios";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UserParamsSchema, PostQuerySchema } from "@workspace/schemas";
import { buildQueryKey, injectParams, serializeSearchQuery, useAxiosInstance } from "../util";





type GetUserPostsQueryInput = {
  params: z.output<typeof UserParamsSchema>;
  query: z.input<typeof PostQuerySchema>;
};

export const getUserPostsQueryOptions = (axios: AxiosInstance, input: GetUserPostsQueryInput) => {
  const { params, query } = input;

  const url = injectParams("/users/:id/posts", UserParamsSchema, params);
  const searchQuery = serializeSearchQuery(query);

  return queryOptions({
    queryKey: buildQueryKey(url, query),
    queryFn: async (context) => {
      const response = await axios.get(\`\${url}?\${searchQuery}\`, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
  });
};

export const useGetUserPostsSuspenseQuery = (input: GetUserPostsQueryInput, options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();

  return useSuspenseQuery({
    ...getUserPostsQueryOptions(axios, input),
    ...options,
  });
};
"
`;

exports[`createQueryFile > get-basic (no params, no query) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema } from "@workspace/schemas";
import { buildQueryKey, useAxiosInstance } from "../util";



export const useGetUsersSuspenseQuery = (options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();
  const url = "/users";
  const queryKey = options?.queryKey || buildQueryKey(url);

  return useSuspenseQuery({
    queryKey,
    queryFn: async (context) => {
      const response = await axios.get(url, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
    ...options,
  });
};
"
`;

exports[`createQueryFile > get-with-params (params only) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users/:id
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UserParamsSchema } from "@workspace/schemas";
import { buildQueryKey, injectParams, useAxiosInstance } from "../util";




type GetUserSuspenseQueryInput = {
  params: z.output<typeof UserParamsSchema>;
};

export const useGetUserSuspenseQuery = (input: GetUserSuspenseQueryInput, options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();
  const { params } = input;

  const url = injectParams("/users/:id", UserParamsSchema, params);

  const queryKey = options?.queryKey || buildQueryKey(url);

  return useSuspenseQuery({
    queryKey,
    queryFn: async (context) => {
      const response = await axios.get(url, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
    ...options,
  });
};"
`;

exports[`createQueryFile > get-with-query (query only) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UserQuerySchema } from "@workspace/schemas";
import { buildQueryKey, serializeSearchQuery, useAxiosInstance } from "../util";




type GetUsersSuspenseQueryInput = {
  query: z.input<typeof UserQuerySchema>;
};

export const useGetUsersSuspenseQuery = (input: GetUsersSuspenseQueryInput, options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();
  const { query } = input;
  const url = "/users";

  const searchQuery = serializeSearchQuery(query);

  const queryKey = options?.queryKey || buildQueryKey(url, query);

  return useSuspenseQuery({
    queryKey,
    queryFn: async (context) => {
      const response = await axios.get(\`\${url}?\${searchQuery}\`, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
    ...options,
  });
};"
`;

exports[`createQueryFile > get-with-query-and-params (both) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated query file for GET /users/:id/posts
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useSuspenseQuery, UseSuspenseQueryOptions } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UserParamsSchema, PostQuerySchema } from "@workspace/schemas";
import { buildQueryKey, injectParams, serializeSearchQuery, useAxiosInstance } from "../util";





type GetUserPostsSuspenseQueryInput = {
  params: z.output<typeof UserParamsSchema>;
  query: z.input<typeof PostQuerySchema>;
};

export const useGetUserPostsSuspenseQuery = (input: GetUserPostsSuspenseQueryInput, options?: Except<UseSuspenseQueryOptions<z.infer<typeof UserSchema>>, "queryFn">) => {
  const axios = useAxiosInstance();
  const { params, query } = input;

  const url = injectParams("/users/:id/posts", UserParamsSchema, params);
  const searchQuery = serializeSearchQuery(query);

  const queryKey = options?.queryKey || buildQueryKey(url, query);

  return useSuspenseQuery({
    queryKey,
    queryFn: async (context) => {
      const response = await axios.get(\`\${url}?\${searchQuery}\`, {
        signal: context.signal,
      });

      return UserSchema.parse(response.data);
    },
    ...options,
  });
};
"
`;
